confiture-web-app/src/styles/dsfr-custom-icons.css
/* How to add custom icon: https://www.systeme-de-design.gouv.fr/version-courante/fr/fondamentaux/icone */

/* https://remixicon.com/icon/more-2-line */
.fr-icon-more-2-line::before,
.fr-icon-more-2-line::after {
  -webkit-mask-image: url("./dsfr-custom-icons/more-2-line.svg");
  mask-image: url("./dsfr-custom-icons/more-2-line.svg");
}

/* https://remixicon.com/icon/file-copy-2-line */
.fr-icon-file-copy-2-line::before,
.fr-icon-file-copy-2-line::after {
  -webkit-mask-image: url("./dsfr-custom-icons/file-copy-2-line.svg");
  mask-image: url("./dsfr-custom-icons/file-copy-2-line.svg");
}

/* https://remixicon.com/icon/lock-2-line */
.fr-icon-lock-2-line::before,
.fr-icon-lock-2-line::after {
  -webkit-mask-image: url("./dsfr-custom-icons/lock-2-line.svg");
  mask-image: url("./dsfr-custom-icons/lock-2-line.svg");
}

